Update requirements.txt for Render free tier optimization
- Pin pydantic==2.6.4 and pydantic-core==2.16.3 to avoid Rust builds
- Replace Celery/Redis with APScheduler for free tier compatibility
- Remove packages requiring compilation
- Optimize for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-# FastAPI and web server dependencies
+# FastAPI and web server dependencies - optimized for Render free tier
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
+pydantic==2.6.4
+pydantic-core==2.16.3
 pydantic-settings==2.1.0
 
 # Telegram Bot
 aiogram==3.3.0
 
-# Database
+# Database - using lighter alternatives
 sqlalchemy==2.0.23
 alembic==1.13.1
 psycopg2-binary==2.9.9
@@ -17,15 +18,14 @@ google-api-python-client==2.110.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 
-# Utilities
+# Utilities - avoid packages requiring compilation
 aiohttp==3.9.1
 python-multipart==0.0.6
 python-dotenv==1.0.0
-celery==5.3.4
-redis==5.0.1
 
-# Development
+# Background tasks - Redis alternative for free tier
+apscheduler==3.10.4
+
+# Development (optional for production)
 pytest==7.4.3
 pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
